[package]
name = "halo2_fib"
version = "0.1.0"
edition = "2021"

[features]
default = ["halo2_proofs/dev-graph", "plotters"]

[patch.crates-io]
halo2_proofs = { path = "/home/hunjixin/code/halo2/halo2_proofs" }

[dependencies]
halo2_proofs = "0.3.0"
plotters = { version = "0.3.5", optional = true }

rand_core = "0.6"
